  - This new feature is enabled by default and can be disabled by navigating 
  	to File --> New Session Properties --> Tab SQL --> Show SQL execution errors in result tab.
  - Along with this feature comes a new Message Panel right mouse menu "Save size 0" that allows
    to hide the Message panel at application start up.

Bug-fixes:

3433001: Elapsed time for building output is incorrect.

3183001: ClassCastException occurs, when the first tab should be closed after running a query.

Hibernate Plugin:
 Fixed several bugs in the HQL results reading function concerning lazy loaded non collection attributes.

3408086: Non ASCII characters are highlighted as as invalid characters at the SQL-Editor pane. 

SQLScripts plugin:
  Generating data/insert scripts from inside the Object tree failed for tables that didn't belong to the
  default schema when the Plugins preferences where chosen not to qualify table names.


Patch #3401315 (Derby Object tree trigger).  Trigger source was not being displayed because the  
SYS.SYSTRIGGERS.REFERENCINGOLD and SYS.SYSTRIGGERS.REFERENCINGNEW columns no longer accept 1 and 0 as values 
for comparison.  Now an actual boolean data type is used. (Thanks to Jesus Marin for the patch)

3139446 fixed squirrelsql.bat: % was missing at the end of line set IZPACK_JAVA=%JAVA_HOME

3308469, 3209074, 2983094: SQL with aliases don't result always with aliases as column headings
  Affected modules: 
  - Export as CSV/XLS/XML
  - Copy with headers
  - Copy as HTML

Fixed some memory issues with closed sessions. 

3393589: Introduced performance warning for the global preference " Save Preferences Immediately" when
multiple statements are executed and set the property's default value to false.

2985845: Create table script generates incorrect foreign key stmt: Foreign key columns were used as primary key columns.
